--- a/views/components/header.ejs
+++ b/views/components/header.ejs
@@ -3,12 +3,13 @@
 
     <div id="header_container" class="row">
         <div id="userId_info">
-            <p>User : <%- userId %>
+            <p>User :
+                <%- userId %>
             </p>
         </div>
 
         <% if(userId !=="-----" ) {%>
-            <a href=/login/logout id="logoutBtn" class="btn btn-primary">ログアウト</a>
+            <a href=/login/logout id="logoutBtn" class="btn">ログアウト</a>
             <% } %>
 
     </div>
