--- a/views/games_history.ejs
+++ b/views/games_history.ejs
@@ -26,7 +26,7 @@
             <!-- <div class="container"> -->
             <!-- <div id="green-field" class="row justify-content-center align-self-center bg-success"> -->
             <div id="green-field" class="row">
-                <div id="brown-field" class="col border border-white m-3">
+                <div id="brown-field" class="col m-3">
                     <div class="list-group">
                         <div id="scroll-container">
                             <% responseBody.gamesList.forEach(element=> { %>
@@ -34,7 +34,7 @@
                                     <% }) %>
                         </div>
                     </div>
-                    <a href="/" id="goHomeBtn" class="btn btn-warning">HOME</a>
+                    <a href="/" id="goHomeBtn" class="btn">HOME</a>
                 </div>
             </div>
         </div>
