--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
     <link rel="manifest" href="manifest.json">
     <link rel="manifest" href="manifest.webmanifest" />
     <script async src="https://cdn.jsdelivr.net/npm/pwacompat" crossorigin="anonymous"></script>
-    <meta name="theme-color" content="#0aa574">
+    <meta name="theme-color" content="#000">
 
     <title>Batting Results | Login</title>
 
@@ -29,9 +29,9 @@
             <!-- <div class="container"> -->
             <!-- <div id="green-field" class="row justify-content-center align-self-center bg-success"> -->
             <div id="green-field" class="row">
-                <div id="brown-field" class="col border border-white m-3">
+                <div id="brown-field" class="col m-3">
                     <!-- <div id="white-field" class="border border-dark rounded m-4"> -->
-                    <div id="white-field" class="border border-dark rounded">
+                    <div id="white-field" class="rounded">
                         <div id="title_login">ログイン</div>
                         <form method="post" action="/login">
                             <input type="text" id="login_id" name="username" placeholder="ID(E-mail)" required></input>
