--- a/views/regist.ejs
+++ b/views/regist.ejs
@@ -23,12 +23,9 @@
     <%- include("components/header"); %>
 
         <div id="main">
-            <!-- <div class="container"> -->
-            <!-- <div id="green-field" class="row justify-content-center align-self-center bg-success"> -->
             <div id="green-field" class="row">
-                <div id="brown-field" class="col border border-white m-3">
-                    <!-- <div id="white-field" class="border border-dark rounded m-4"> -->
-                    <div id="white-field" class="border border-dark rounded">
+                <div id="brown-field" class="col m-3">
+                    <div id="white-field" class="rounded">
                         <% if(error) {%>
                             <h5 id="error-message" class="text-center">
                                 <%- error %>
