--- a/public/stylesheets/style_forIndex.css
+++ b/public/stylesheets/style_forIndex.css
@@ -1,3 +1,96 @@
+header div#header_container, header div#header_container a#logoutBtn, html body div#main div#green-field, html body div#main div#green-field div#brown-field, html body div#main div#green-field div#brown-field #date_label, html body div#main div#green-field div#brown-field #opponent, html body div#main div#green-field div#brown-field #gameStartBtn, html body div#main div#green-field div#brown-field #historyGameBtn {
+  background-color: #000;
+  border: 3px solid #fff;
+  -webkit-box-shadow: 0px 0px 3px green, 0px 0px 6px yellowgreen, inset 0px 0px 3px green, inset 0px 0px 6px yellowgreen;
+          box-shadow: 0px 0px 3px green, 0px 0px 6px yellowgreen, inset 0px 0px 3px green, inset 0px 0px 6px yellowgreen;
+}
+
+header div#header_container div#userId_info p, header div#header_container a#logoutBtn, html body div#main div#green-field, html body div#main div#green-field div#brown-field, html body div#main div#green-field div#brown-field #date_label, html body div#main div#green-field div#brown-field #date_input, html body div#main div#green-field div#brown-field #opponent, html body div#main div#green-field div#brown-field #gameStartBtn, html body div#main div#green-field div#brown-field #historyGameBtn {
+  color: #fff;
+  text-shadow: 0px 0px 3px green, 0px 0px 6px yellowgreen;
+}
+
+header {
+  position: fixed;
+  height: 60px;
+  width: 100%;
+  z-index: 1;
+  margin-right: 0px;
+  padding: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+header div#header_container {
+  height: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+
+@media screen and (min-width: 481px) {
+  header div#header_container {
+    width: 600px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  header div#header_container {
+    width: 100%;
+  }
+}
+
+header div#header_container div#userId_info {
+  position: absolute;
+}
+
+@media screen and (min-width: 481px) {
+  header div#header_container div#userId_info {
+    top: 15px;
+    left: 20px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  header div#header_container div#userId_info {
+    top: 20px;
+    left: 4px;
+  }
+}
+
+header div#header_container div#userId_info p {
+  font-weight: bold;
+  font-size: large;
+}
+
+@media screen and (max-width: 480px) {
+  header div#header_container div#userId_info p {
+    font-size: medium;
+  }
+}
+
+header div#header_container a#logoutBtn {
+  position: absolute;
+  text-align: center;
+  font-weight: bold;
+  top: 10px;
+}
+
+@media screen and (min-width: 481px) {
+  header div#header_container a#logoutBtn {
+    left: 80%;
+    width: 100px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  header div#header_container a#logoutBtn {
+    left: 70%;
+    width: 100px;
+    font-size: smaller;
+  }
+}
+
 @media screen and (max-width: 480px) {
   html {
     height: 100%;
@@ -5,7 +98,7 @@
 }
 
 html body {
-  background-color: #f4f5f7;
+  background-color: #000;
 }
 
 @media screen and (max-width: 480px) {
@@ -30,7 +123,6 @@ html body div#main div#green-field {
   position: relative;
   padding-top: 60px;
   margin: 0 auto;
-  background-color: #99cc33;
 }
 
 @media screen and (min-width: 481px) {
@@ -43,11 +135,6 @@ html body div#main div#green-field {
   html body div#main div#green-field {
     height: 100%;
   }
-}
-
-html body div#main div#green-field div#brown-field {
-  background-color: #cc6633;
-  border-width: 5px !important;
 }
 
 @media screen and (min-width: 481px) {
@@ -92,7 +179,6 @@ html body div#main div#green-field div#brown-field #title {
 html body div#main div#green-field div#brown-field #date_label {
   position: relative;
   display: inline-block;
-  border: 2px solid #ccc;
   border-radius: 15px;
 }
 
@@ -121,7 +207,6 @@ html body div#main div#green-field div#brown-field #date_input {
   background: transparent;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  color: #fff;
 }
 
 @media screen and (min-width: 481px) {
@@ -174,7 +259,6 @@ html body div#main div#green-field div#brown-field #opponent {
   height: auto;
   -webkit-transform: translateY(0) translateX(-50%);
           transform: translateY(0) translateX(-50%);
-  background-color: #fff;
   text-align: left;
 }
 
@@ -227,7 +311,6 @@ html body div#main div#green-field div#brown-field #gameStartBtn {
           transform: translateY(0) translateX(-50%);
   font-weight: bold;
   font-size: large;
-  background-color: #33cc66;
 }
 
 @media screen and (min-width: 481px) {
