--- a/public/stylesheets/style_forgames.css
+++ b/public/stylesheets/style_forgames.css
@@ -1,3 +1,96 @@
+header div#header_container, header div#header_container a#logoutBtn, html body div#main div#green-field, html body div#main div#green-field div#brown-field, html body div#main div#green-field div#brown-field #goHomeBtn, html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item {
+  background-color: #000;
+  border: 3px solid #fff;
+  -webkit-box-shadow: 0px 0px 3px green, 0px 0px 6px yellowgreen, inset 0px 0px 3px green, inset 0px 0px 6px yellowgreen;
+          box-shadow: 0px 0px 3px green, 0px 0px 6px yellowgreen, inset 0px 0px 3px green, inset 0px 0px 6px yellowgreen;
+}
+
+header div#header_container div#userId_info p, header div#header_container a#logoutBtn, html body div#main div#green-field, html body div#main div#green-field div#brown-field, html body div#main div#green-field div#brown-field #goHomeBtn, html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item {
+  color: #fff;
+  text-shadow: 0px 0px 3px green, 0px 0px 6px yellowgreen;
+}
+
+header {
+  position: fixed;
+  height: 60px;
+  width: 100%;
+  z-index: 1;
+  margin-right: 0px;
+  padding: 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+header div#header_container {
+  height: 100%;
+  margin: 0 auto;
+  position: relative;
+}
+
+@media screen and (min-width: 481px) {
+  header div#header_container {
+    width: 600px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  header div#header_container {
+    width: 100%;
+  }
+}
+
+header div#header_container div#userId_info {
+  position: absolute;
+}
+
+@media screen and (min-width: 481px) {
+  header div#header_container div#userId_info {
+    top: 15px;
+    left: 20px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  header div#header_container div#userId_info {
+    top: 20px;
+    left: 4px;
+  }
+}
+
+header div#header_container div#userId_info p {
+  font-weight: bold;
+  font-size: large;
+}
+
+@media screen and (max-width: 480px) {
+  header div#header_container div#userId_info p {
+    font-size: medium;
+  }
+}
+
+header div#header_container a#logoutBtn {
+  position: absolute;
+  text-align: center;
+  font-weight: bold;
+  top: 10px;
+}
+
+@media screen and (min-width: 481px) {
+  header div#header_container a#logoutBtn {
+    left: 80%;
+    width: 100px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  header div#header_container a#logoutBtn {
+    left: 70%;
+    width: 100px;
+    font-size: smaller;
+  }
+}
+
 @media screen and (max-width: 480px) {
   html {
     height: 100%;
@@ -5,7 +98,7 @@
 }
 
 html body {
-  background-color: #f4f5f7;
+  background-color: #000;
 }
 
 @media screen and (max-width: 480px) {
@@ -29,7 +122,6 @@ html body div#main {
 html body div#main div#green-field {
   padding-top: 60px;
   margin: 0 auto;
-  background-color: #99cc33;
 }
 
 @media screen and (min-width: 481px) {
@@ -44,21 +136,9 @@ html body div#main div#green-field {
   }
 }
 
-html body div#main div#green-field div#brown-field {
-  background-color: #cc6633;
-  border-width: 5px !important;
-}
-
 @media screen and (min-width: 481px) {
   html body div#main div#green-field div#brown-field {
     height: 700px;
-  }
-  html body div#main div#green-field div#brown-field #goHomeBtn {
-    position: absolute;
-    top: 620px;
-    left: 50%;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
   }
 }
 
@@ -67,13 +147,26 @@ html body div#main div#green-field div#brown-field {
     height: 94%;
     padding: 0 10px;
   }
+}
+
+html body div#main div#green-field div#brown-field #goHomeBtn {
+  position: absolute;
+  -webkit-transform: translateY(0) translateX(-50%);
+          transform: translateY(0) translateX(-50%);
+}
+
+@media screen and (min-width: 481px) {
   html body div#main div#green-field div#brown-field #goHomeBtn {
-    position: absolute;
+    top: 620px;
+    left: 50%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  html body div#main div#green-field div#brown-field #goHomeBtn {
     width: 100px;
     top: 90px;
     left: 80%;
-    -webkit-transform: translateY(0) translateX(-50%);
-            transform: translateY(0) translateX(-50%);
   }
 }
 
@@ -86,25 +179,6 @@ html body div#main div#green-field div#brown-field .list-group #scroll-container
     height: 550px;
     margin-top: 30px;
   }
-  html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item {
-    overflow: hidden;
-    margin-bottom: 10px;
-  }
-  html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p {
-    margin: 0;
-  }
-  html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-date {
-    display: inline-block;
-    font-size: 20px;
-    width: 30%;
-  }
-  html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-vs {
-    display: inline-block;
-  }
-  html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-opponent {
-    display: inline-block;
-    font-size: 30px;
-  }
 }
 
 @media screen and (max-width: 480px) {
@@ -112,20 +186,48 @@ html body div#main div#green-field div#brown-field .list-group #scroll-container
     height: 370px;
     margin-top: 70px;
   }
+}
+
+html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item {
+  overflow: hidden;
+}
+
+@media screen and (min-width: 481px) {
   html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item {
-    overflow: hidden;
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item {
     padding: 10px 0;
     margin-bottom: 3px;
     height: 60px;
     position: relative;
     display: inline-block;
   }
+}
+
+html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p {
+  margin: 0;
+  display: inline-block;
+}
+
+@media screen and (max-width: 480px) {
   html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p {
     position: absolute;
-    margin: 0;
   }
+}
+
+@media screen and (min-width: 481px) {
   html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-date {
-    display: inline-block;
+    font-size: 20px;
+    width: 30%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-date {
     font-size: 15px;
     width: 20%;
     top: 50%;
@@ -133,15 +235,25 @@ html body div#main div#green-field div#brown-field .list-group #scroll-container
     -webkit-transform: translateY(-50%) translateX(0);
             transform: translateY(-50%) translateX(0);
   }
+}
+
+@media screen and (max-width: 480px) {
   html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-vs {
-    display: inline-block;
     top: 60%;
     left: 30%;
     -webkit-transform: translateY(-50%) translateX(0);
             transform: translateY(-50%) translateX(0);
   }
+}
+
+@media screen and (min-width: 481px) {
   html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-opponent {
-    display: inline-block;
+    font-size: 30px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  html body div#main div#green-field div#brown-field .list-group #scroll-container a.scroll-item p.p-opponent {
     font-size: 25px;
     top: 55%;
     left: 40%;
