--- a/views/scorebook.ejs
+++ b/views/scorebook.ejs
@@ -26,11 +26,11 @@
             <!-- <div class="container"> -->
             <!-- <div id="green-field" class="row justify-content-center align-self-center bg-success"> -->
             <div id="green-field" class="row">
-                <div id="brown-field" class="col border border-white m-3">
+                <div id="brown-field" class="col m-3">
                     <h2>Socre Book</h2>
                     <h3>Playing member</h3>
-                    <table id="playing-member" class="table table-light">
-                        <thead class="thead-dark text-center">
+                    <table id="playing-member" class="table">
+                        <thead class="text-center">
                             <tr id="tablehead-tr">
                                 <th scope="col">打順</th>
                                 <th scope="col">氏名</th>
@@ -50,8 +50,8 @@
 
                     <% if(responseBody.playersList.find(element=> element.order < 0)){ %>
                         <h4>Changed member</h4>
-                        <table id="changed-member" class="table table-light">
-                            <thead class="thead-dark text-center">
+                        <table id="changed-member" class="table">
+                            <thead class="text-center">
                                 <tr id="tablehead2-tr">
                                     <th scope="col">氏名</th>
                                 </tr>
@@ -66,7 +66,7 @@
                             </tbody>
                         </table>
                         <% }; %>
-                            <a href=/games_history id="historyGameBtn" class="btn btn-warning">試合一覧</a>
+                            <a href=/games_history id="historyGameBtn" class="btn">試合一覧</a>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS  -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+        <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
         <!-- <script src="/javascripts/basic2.js"></script> -->
         <script src="/javascripts/submit.js"></script>
